--- a/README.qmd
+++ b/README.qmd
@@ -1,5 +1,5 @@
 ---
-output: github_document
+format: gfm
 ---
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
@@ -8,12 +8,11 @@ output: github_document
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
-  fig.path = "man/figures/README-",
-  out.width = "100%"
+  fig.path = "man/figures/README-"
 )
 ```
 
-# BAtrending
+# BAtrending <img src="man/figures/logo.png" align="right" height="136" alt="" />
 
 <!-- badges: start -->
 <!-- badges: end -->
@@ -50,6 +49,9 @@ BA_CO <- add_confint(BA_CO)
 ```
 
 ```{r plot, message=FALSE}
+#| out.width: 100%
+#| fig.width: 10
+#| fig.asp: 0.4
 plot_BA_combine(BA_CO, aspect_ratio = 1)
 ```
 
